@startuml design.png
class ElementAvecNom {
  String titre
  String description()
  ElementAvecNom(String titre)
}
class ElementRepere
ElementAvecNom <|-- Axe
ElementAvecNom <|-- ElementRepere
ElementRepere <|-- Point
class Point {
  int x
  int y
  String description()
  Point()
  Point(String titre, Couleur c, int x, int y)
}
ElementRepere <|-- Segment
class Segment {
  double getLongueur()
  String description()
  Segment()
  Segment(String titre, Couleur c, Point origine, Point destination)
}
Segment "1" *-- "1" Point : origine
Segment "1" *-- "1" Point : destination
class Couleur {
  {static} Couleur auHasard()
  {static} Couleur noir()
  {static} Couleur blanc()
  {static} Couleur rouge()
  {static} Couleur vert()
  {static} Couleur bleu()
  int r
  int g
  int b
  Couleur()
  Couleur(int r, int g, int b)
  String description()
}
ElementRepere "1" *-- "1" Couleur : couleur
class ElementRepere {
  String description()
  ElementRepere(String titre, Couleur couleur)
}
class Axe {
  int taille
  String description()
  Axe()
  Axe(String titre, int taille)
}
class EnsembleElementRepere {
  int tailleCourante
  int tailleMaximale
  void ajouter(ElementRepere e)
  ElementRepere recuperer(int i)
  EnsembleElementRepere()
}
EnsembleElementRepere "1" *-- "*" ElementRepere : elements
@enduml
